samples/_failures_safe/1761499369_26beb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95da7e97.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_95da7e97.c:187:20: error: missing terminating " character
  187 |             printf("Vertex %d: unreachable
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_95da7e97.c:187:13: error: expected expression at end of input
  187 |             printf("Vertex %d: unreachable
      |             ^~~~~~
./samples/SAFE/__tmp_95da7e97.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95da7e97.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95da7e97.c:187:13: error: expected declaration or statement at end of input
